# DLaaS

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  config_file.json  docker-compose.yml  links.csv  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  view_data.ipynb
.github/workflows/: main.yml
config_files/: apis.json  mysql.json  mysql.sql  mysql_sample.json  postgres.json  sqlite.json  webscrapper.json  webscrapper_book.json
dev/: docker-compose.yml  person-sqlite3-dump.sql  person.sqlite3
dev/mysql-dump/: person-dump.sql
dev/postgres-dump/: person-dump.sql
methods/extractors/: apiRequests.py  databaseConnectors.py  test_apiRequests.py  test_databaseConnectors.py  test_webPageDataScrappers.py  webPageDataScrappers.py
methods/loaders/: fileSavers.py  test_fileSavers.py
methods/transformers/: dataCleaners.py  test_dataCleaners.py
output/: freetogame_api.json
src/: main.py  requirements.txt
src/methods/extractors/: apiRequests.py  databaseConnectors.py  webPageDataScrappers.py
src/methods/loaders/: fileSavers.py
src/methods/transformers/: dataCleaners.py
tests/extractors/: test_apiRequests.py  test_databaseConnectors.py  test_webPageDataScrappers.py
tests/loaders/: test_fileSavers.py
tests/transformers/: test_dataCleaners.py
tests/utils/: test_databaseUrlBuilders.py
utils/: databaseUrlBuilders.py
