[tool.poetry]
name = "dlaas"
version = "0.1.0"
description = "Data Lake as a Service"
authors = ["eduardo machado <eduardoshy1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.20"
pymysql = "^1.1.0"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
